--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/Properties/Resources.resx
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/Properties/Resources.resx
@@ -217,4 +217,7 @@
   <data name="edit_black1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_black1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="save" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\save.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
