--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/Ventanas/Asesor/Citas/frmDetalleCitaAsesor.resx
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/Ventanas/Asesor/Citas/frmDetalleCitaAsesor.resx
@@ -123,7 +123,7 @@
   <metadata name="Nombre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="Cita.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="FechaCita.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="MiembroOOIA.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
