--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/Ventanas/Coordinador/Gestionar Datos/Gestion_Humana/Gestion/frmGestionarProfesor.resx
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/Ventanas/Coordinador/Gestionar Datos/Gestion_Humana/Gestion/frmGestionarProfesor.resx
@@ -214,7 +214,10 @@
   <metadata name="ofd_Imagen.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>115, 20</value>
   </metadata>
+  <metadata name="ttContra.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>231, 20</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>136</value>
   </metadata>
 </root>
